# dice_master

./: Cargo.toml  LICENSE.TXT  README.MD  rust-toolchain.toml
.cargo/: config.toml
src/: game.rs  hello.rs  main.rs
src/effects/: effects.rs  fade.rs  mod.rs
src/game/: assets.rs  config.rs  events.rs  game.rs  mod.rs  state.rs
src/scenes/: hello.rs  loading.rs  menu.rs  mod.rs  splash.rs  state.rs
src/scenes/menu/: actions.rs  buttons.rs  menu.rs  mod.rs
